[Merge] Squashed feature/quote * Fixed a problem * Optimized some codes

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -593,7 +593,6 @@
 .quote-indicator {
   border-radius: 4px;
   margin-bottom: 10px;
-  background: $ui-primary-color;
   padding: 10px;
 }
 
